# casterm

./: .gitignore  CLAUDE.md  Cargo.toml  IDEA.md  Makefile  README.md  SPEC.md  about.hbs  about.toml  build.rs  deny.toml  rust-toolchain.toml
.cargo/: config.toml
assets/config/: default.yaml
assets/themes/: Cobalt2.toml  Mariana.toml  acme.toml  afterglow.toml  alabaster.toml  argonaut.toml  ashes_dark.toml  ashes_light.toml  ayu_dark.toml  ayu_light.toml  baitong.toml  bluish.toml  catppuccin.toml  challenger_deep.toml  citylights.toml  cyber_punk_neon.toml  dark_pastels.toml  dark_pride.toml  deep_space.toml  doom_one.toml  dracula.toml  enfocado_dark.toml  enfocado_light.toml  everforest_dark.toml  everforest_light.toml  falcon.toml  flat_remix.toml  flexoki.toml  ganbaru.toml  github_dark.toml  github_light.toml  gnome_terminal.toml  google.toml  gotham.toml  gruvbox_dark.toml  gruvbox_light.toml  gruvbox_material.toml  hardhacker.toml  hatsunemiku.toml  hyper.toml  (+53 more)
docker/: Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
src/: assets.rs  main.rs
src/app/: mod.rs  multiplexer.rs  pty.rs  serial.rs  session.rs  ssh.rs  terminal.rs  vte_processor.rs
src/config/: defaults.rs  mod.rs  theme.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/state/: mod.rs
src/support/: error.rs  mod.rs
src/ui/: mod.rs
src/ui/cli/: mod.rs
src/ui/gui/: mod.rs
src/ui/tui/: mod.rs
tests/: integration_test.rs
xtask/src/: main.rs
