[package]
name = "casterm"
version = "1.0.0"
edition = "2021"
rust-version = "1.85"
authors = ["CasjaysDev <casjay@yahoo.com>"]
description = "Modern terminal emulator, multiplexer, and SSH/serial connection manager"
license = "MIT"
repository = "https://github.com/casapps/casterm"
keywords = ["terminal", "multiplexer", "ssh", "tui", "gui"]
categories = ["command-line-utilities", "development-tools"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI parsing
clap = { version = "4", features = ["derive", "env"] }

# Configuration
figment = { version = "0.10", features = ["yaml", "env"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# GUI (winit + wgpu)
winit = "0.30"
wgpu = "24"
softbuffer = "0.4"

# Terminal emulation
vte = "0.15"
portable-pty = "0.8"

# Fonts
fontdue = "0.9"
ttf-parser = "0.25"
cosmic-text = "0.12"

# Theme embedding
rust-embed = "8"
include_dir = "0.7"

# Clipboard
arboard = "3"

# Desktop notifications
notify-rust = "4"

# Theme detection
dark-light = "2"

# File dialogs
rfd = "0.15"

# TLS
rustls = "0.23"
webpki-roots = "0.26"

# SSH
russh = "0.50"
russh-keys = "0.49"

# Serial ports
serialport = "4"

# Compression
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

# UUID
uuid = { version = "1", features = ["v4", "v7"] }

# Date/time
time = { version = "0.3", features = ["formatting", "parsing", "local-offset"] }
jiff = "0.2"

# Filesystem watching
notify = "8"
walkdir = "2"

# Process/IPC
interprocess = "2"

# Hashing
blake3 = "1"

# Serialization formats
toml = "0.8"
serde_json = "1"

# Filesystem helpers
dirs = "6"
which = "7"

# Image decoding (for sixel, etc.)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }

# Unicode
unicode-width = "0.2"
unicode-segmentation = "1"

# Unix system calls (libc getpwuid etc.)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Linux-specific: secrets, display protocols, D-Bus
[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "4", features = ["rt-tokio-crypto-rust"] }
x11rb = { version = "0.14", features = ["allow-unsafe-code"] }
wayland-client = { version = "0.31", features = ["dlopen"] }
zbus = "5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Console"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[build-dependencies]
# Build metadata
vergen-gitcl = { version = "1", features = ["build", "cargo", "rustc", "si"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[features]
default = ["gui", "tui", "cli"]
gui = []
tui = []
cli = []

[[bin]]
name = "casterm"
path = "src/main.rs"

[workspace]
members = ["xtask"]
